@@ -160,6 +160,7 @@ class MagicWord {
 		'index',
 		'noindex',
 		'staticredirect',
+		'noheader',
 	);
 
 
