@@ -146,6 +146,10 @@ The following extensions are migrated into MediaWiki 1.14:
   $wgExternalLinkTarget
 * api.php now sends "Retry-After" and "X-Database-Lag" HTTP headers if the maxlag
   check fails, just like index.php does
+* Configurable per-namespace and per-page header,
+  respectively MediaWiki:Pageheader-# where # is the namespace number, and
+  MediaWiki:Pagenumber-#-PAGENAME where # is the page's namespace number and
+  PAGENAME is the page name minus the namespace prefix. Can be disabled with the new magic word __NOHEADER__
 
 
 === Bug fixes in 1.14 ===
